--- a/static/css/edit.css
+++ b/static/css/edit.css
@@ -6,13 +6,44 @@ body{
     font-family: 'Roboto', 'sans-serif'!important; 
     font-size: 14px!important;
 }
-p{
-    margin-bottom: 0.5rem!important;
+a{
+    text-decoration: none!important;
+    color:#777878!important;
 }
+.scroll{
+    overflow: scroll;
+    margin-top: 5px!important;
+    width: 100%;
+    max-height: 150px;
+    border: none;
+}
+/* Scrollbar styles */
+::-webkit-scrollbar {
+    width: 12px;
+    height: 12px;
+    }
+    
+    ::-webkit-scrollbar-track {
+    border: none;
+    }
+    
+    ::-webkit-scrollbar-thumb { 
+    border-radius: 0px;
+    }
+    
+    ::-webkit-scrollbar-thumb:hover {
+    background: none;  
+    }
+
 #navbarHeader{
     background-color: #f7f7f7;
 }
 /*modal css*/
+.md-modal{
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .5rem;
+    background-color: #fff;
+}
 .fade-scale {
     transform: scale(0);
     opacity: 0;
@@ -32,7 +63,7 @@ p{
     border-width: none!important;
 }
 .search-button{
-        color: #fff;
+    color: #fff;
     background-color: #aee808;
     height: 40px;
     width: 70px;
@@ -61,8 +92,8 @@ button{
     border: none;
     background: none;
 }
-a{
-    color: green;
+.inline-buttons{
+    display: inline-flex;
 }
 #banner{
     margin-top: 28px;
@@ -92,7 +123,17 @@ table.table.table-striped > tbody > tr{
 }
 .presentation_image{
     width: 100%;
+    width: 200px;
     position: relative;
+    margin: auto;
+    margin-top: 0px;
+}
+.modal-image .modal-img-main{
+    width: 100%;
+    width: 200px;
+    position: relative;
+    margin: auto;
+    margin-top: 0px;
 }
 .logos{
     margin: auto;
@@ -119,3 +160,80 @@ table.table.table-striped > tbody > tr{
     padding-top: 25px;
     padding-bottom: 10px;
 }
+.price{
+    float: right;
+}
+@media screen and (max-width: 540px){
+
+.md-modal{
+    width: 65%!important;
+    font-size: 65%!important;
+}
+.modal-img{
+    width: 49%!important;
+    display: inline-block;
+    padding-bottom: 0px!important;
+}
+.inline-buttons{
+    font-size: 14px;
+}}
+
+@media screen and (min-width: 541px) and (max-width: 768px){
+.md-modal{
+    width: 65%!important;
+    max-height: 95%!important;
+    font-size: 70%!important;
+}
+.modal-img{
+    width: 49%!important;
+    display: inline-block;
+    padding-bottom: 0px!important;
+}
+.modal-img-main{
+    width: 100%!important;
+    /* display: inline-block;
+    padding-bottom: 0px!important; */
+}
+.inline-buttons{
+    font-size: 14px;
+}}
+@media screen and (min-width: 769px) and (max-width: 1024px){
+    .md-modal {
+        width: 65%!important;
+        max-height: 95%!important;
+        font-size: 90%!important;
+    }
+    .modal-img{
+        width: 49%!important;
+        display: inline-block;
+        padding-bottom: 0px!important;
+    }
+    .modal-img-main{
+        width: 80%!important;
+
+        /* display: inline-block;
+        padding-bottom: 0px!important; */
+    }
+    .inline-buttons{
+        font-size: 14px;
+    }}
+    @media screen and (min-width: 1024px) and (max-width: 3000px){
+        .md-modal {
+            width: 65%!important;
+            max-height: 95%!important;
+            font-size: 90%!important;
+        }
+        .modal-img{
+            width: 49%!important;
+            display: inline-block;
+            padding-bottom: 0px!important;
+        }
+        .modal-img-main{
+            width: 80%!important;
+    
+            /* display: inline-block;
+            padding-bottom: 0px!important; */
+        }
+        .inline-buttons{
+            font-size: 14px;
+        }}
